--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.password=123
 
 #drop n create table again, good for testing, comment this in production
 #spring.jpa.hibernate.ddl-auto=create
+
+logging.file.path=application-debug.log
+logging.level.dm.api=INFO
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
